# c-compat

./: Cargo.toml
headers/: errno.h  stdbool.h  stdint.h  stdio.h  stdlib.h  string.h
src/: ctype.rs  lib.rs  math.rs  stdlib.rs  string.rs
